# raxel

./: .gitignore  .gitmodules  README.md
docs/: first_multipass.md  gr.sh  pc.md  report_structure.md  sb.md
docs/dev/images/: timeline.md  weekly_progress.md
docs/w25-report/: _temp.html  report.md
raxel/: CMakeLists.txt  frag.spv  lib
raxel-demo/: .gitignore  main.c  raxel.cmake
raxel-test/: main.c  raxel.cmake
raxel-test/tests/: bvh.h  container.h  hashtable.h
raxel/assets/shaders/: blit.frag  compute.comp  uv.comp  voxel.comp
raxel/core/: config.h  graphics.h  input.h  playground.h  util.h  voxel.h
raxel/core/assets/: raxel_file.h
raxel/core/graphics/: raxel_pc_buffer.c  raxel_pc_buffer.h  raxel_pipeline.c  raxel_pipeline.h  raxel_sb_buffer.c  raxel_sb_buffer.h  raxel_suface.c  raxel_surface.c  raxel_surface.h  raxel_surface_glfw.c  raxel_window.c  raxel_window.h  vk.h
raxel/core/graphics/passes/: clear_color_pass.c  clear_color_pass.h  clear_pass.c  compute_pass.c  compute_pass.h  red_pass.c  red_pass.h
raxel/core/input/: raxel_input.c  raxel_input.h
raxel/core/util/: raxel_container.c  raxel_container.h  raxel_debug.h  raxel_hashtable.c  raxel_hashtable.h  raxel_mem.c  raxel_mem.h  raxel_test.h
raxel/core/voxel/: raxel_bvh.c  raxel_bvh.h  raxel_voxel.c  raxel_voxel.h
raxel/include/: raxel.h
raxel/scripts/: raxel.py  raxel_install.sh
raxel/scripts/commands/: raxel_build.py
raxel/scripts/tools/: build_util.py  raxel_br.py  raxel_build.py  raxel_clean.py  raxel_index.py  raxel_run.py  raxel_sc.py  raxel_sc.sh  raxel_test.py  raxel_update.py  tool_util.py
